# OpenTT3DS

./: .gitignore  .gn  BUILD.gn  Makefile.in  endian_checker.py  readme.md  strgen_runner.py
.github/workflows/: main.yml
bundles/3dsx/openttd-custom-0.7.0-N3DS/: openttd.3dsx
bundles/3dsx/openttd-custom-0.7.0-N3DS/lang/: afrikaans.lng  arabic_egypt.lng  brazilian_portuguese.lng  bulgarian.lng  catalan.lng  croatian.lng  czech.lng  danish.lng  dutch.lng  english.lng  english_US.lng  esperanto.lng  estonian.lng  finnish.lng  french.lng  galician.lng  german.lng  hebrew.lng  hungarian.lng  icelandic.lng  indonesian.lng  italian.lng  japanese.lng  korean.lng  latvian.lng  lithuanian.lng  luxembourgish.lng  norwegian_bokmal.lng  norwegian_nynorsk.lng  piglatin.lng  polish.lng  portuguese.lng  romanian.lng  russian.lng  simplified_chinese.lng  slovak.lng  slovenian.lng  spanish.lng  swedish.lng  traditional_chinese.lng  (+3 more)
src/: BUILD.gn  airport_gui.cpp  cmd_helper.h  console.cpp  newgrf_text.cpp
src/ai/: ai_sources.gni
src/ai/api/: ai_api_sources.gni
src/blitter/: blitter_sources.gni
src/core/: core_sources.gni
src/misc/: misc_sources.gni  str.hpp
src/music/: music_sources.gni
src/network/: network_sources.gni
src/network/core/: network_core_sources.gni
src/saveload/: saveload_sources.gni
src/script/: script_sources.gni
src/sound/: sound_sources.gni
src/spriteloader/: spriteloader_sources.gni
src/video/: video_sources.gni
src/widgets/: widgets_sources.gni
src/yapf/: yapf_sources.gni
