# template("lang") {
#   assert(defined(invoker.sources), "Need one or more language.txt sources in $target_name")

#   _source_dir = invoker._source_dir
#   if (_source_dir == "") {
#     _source_dir = "//src/lang"
#   }

#   _dest_dir = invoker.dest_dir
#   if (_dest_dir == "") {
#     _dest_dir = "$root_build_dir/lang"
#   }

#   code_gen_target_name = target_name + "_code_gen"

#   action_foreach(code_gen_target_name) {
#     script = "$root_build_dir/strgen"
#     inputs = [ script, "//src/lang/english.txt" ]
#     sources = invoker.sources

#     script = rebase_path("$root_build_dir/strgen")
    
#     args = []
#     if (enable_translator) {
#       args += ["-t"]
#     }
#     args += [
#       "-s", rebase_path(_source_dir),
#       "-d", rebase_path(_dest_dir),
#       "{{source}}",
#     ]
#   }
# }

# # generate table/strings.h
# lang("english") {
#   sources = ["//src/lang/english.txt"]
#   dest_dir = "$root_build_dir/lang/table"
# }

# # generate .lng files
# lang("langs") {
#   sources = [
#     "//src/lang/afrikaans.txt",
#     "//src/lang/arabic_egypt.txt",
#     "//src/lang/brazilian_portuguese.txt",
#     "//src/lang/bulgarian.txt",
#     "//src/lang/catalan.txt",
#     "//src/lang/croatian.txt",
#     "//src/lang/czech.txt",
#     "//src/lang/danish.txt",
#     "//src/lang/dutch.txt",
#     "//src/lang/english.txt",
#     "//src/lang/english_US.txt",
#     "//src/lang/esperanto.txt",
#     "//src/lang/estonian.txt",
#     "//src/lang/finnish.txt",
#     "//src/lang/french.txt",
#     "//src/lang/galician.txt",
#     "//src/lang/german.txt",
#     "//src/lang/hebrew.txt",
#     "//src/lang/hungarian.txt",
#     "//src/lang/icelandic.txt",
#     "//src/lang/indonesian.txt",
#     "//src/lang/italian.txt",
#     "//src/lang/japanese.txt",
#     "//src/lang/korean.txt",
#     "//src/lang/latvian.txt",
#     "//src/lang/lithuanian.txt",
#     "//src/lang/luxembourgish.txt",
#     "//src/lang/norwegian_bokmal.txt",
#     "//src/lang/norwegian_nynorsk.txt",
#     "//src/lang/piglatin.txt",
#     "//src/lang/polish.txt",
#     "//src/lang/portuguese.txt",
#     "//src/lang/romanian.txt",
#     "//src/lang/russian.txt",
#     "//src/lang/simplified_chinese.txt",
#     "//src/lang/slovak.txt",
#     "//src/lang/slovenian.txt",
#     "//src/lang/spanish.txt",
#     "//src/lang/swedish.txt",
#     "//src/lang/traditional_chinese.txt",
#     "//src/lang/turkish.txt",
#     "//src/lang/ukrainian.txt",
#     "//src/lang/welsh.txt",
#   ]
# }

group("all") {
  deps = [
    "//src:openttd",
  ]
}
