saveload_sources = rebase_path([
  "afterload.cpp",
  "ai_sl.cpp",
  "animated_tile_sl.cpp",
  "autoreplace_sl.cpp",
  "cargopacket_sl.cpp",
  "cheat_sl.cpp",
  "company_sl.cpp",
  "depot_sl.cpp",
  "economy_sl.cpp",
  "engine_sl.cpp",
  "gamelog_sl.cpp",
  "group_sl.cpp",
  "industry_sl.cpp",
  "map_sl.cpp",
  "misc_sl.cpp",
  "newgrf_sl.cpp",
  "oldloader.cpp",
  "oldloader.h",
  "oldloader_sl.cpp",
  "order_sl.cpp",
  "saveload.cpp",
  "saveload.h",
  "saveload_internal.h",
  "signs_sl.cpp",
  "station_sl.cpp",
  "strings_sl.cpp",
  "subsidy_sl.cpp",
  "town_sl.cpp",
  "vehicle_sl.cpp",
  "waypoint_sl.cpp",
], root_build_dir, "//src/saveload")
