ai_api_sources = rebase_path([
  "ai_abstractlist.cpp",
  "ai_accounting.cpp",
  "ai_airport.cpp",
  "ai_base.cpp",
  "ai_bridge.cpp",
  "ai_bridgelist.cpp",
  "ai_cargo.cpp",
  "ai_cargolist.cpp",
  "ai_company.cpp",
  "ai_controller.cpp",
  "ai_date.cpp",
  "ai_depotlist.cpp",
  "ai_engine.cpp",
  "ai_enginelist.cpp",
  "ai_error.cpp",
  "ai_event.cpp",
  "ai_event_types.cpp",
  "ai_execmode.cpp",
  "ai_gamesettings.cpp",
  "ai_group.cpp",
  "ai_grouplist.cpp",
  "ai_industry.cpp",
  "ai_industrylist.cpp",
  "ai_industrytype.cpp",
  "ai_industrytypelist.cpp",
  "ai_list.cpp",
  "ai_log.cpp",
  "ai_map.cpp",
  "ai_marine.cpp",
  "ai_object.cpp",
  "ai_order.cpp",
  "ai_rail.cpp",
  "ai_railtypelist.cpp",
  "ai_road.cpp",
  "ai_sign.cpp",
  "ai_station.cpp",
  "ai_stationlist.cpp",
  "ai_subsidy.cpp",
  "ai_subsidylist.cpp",
  "ai_testmode.cpp",
  "ai_tile.cpp",
  "ai_tilelist.cpp",
  "ai_town.cpp",
  "ai_townlist.cpp",
  "ai_tunnel.cpp",
  "ai_vehicle.cpp",
  "ai_vehiclelist.cpp",
  "ai_waypoint.cpp",
  "ai_waypointlist.cpp",
], root_build_dir, "//src/ai/api")
